html-boilerplate/index.html

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,7 +8,7 @@
     <body>
         <p><strong>Hello</strong> <em>World!</em></p>
         <!--shhh..-->
-
+        <h3>Lists</h3>
         <ol>
             <li><strong>HTML</strong></li>
             <li>CSS</li>
